--- a/css/style.css
+++ b/css/style.css
@@ -1264,6 +1264,121 @@ body.dark {
       -ms-flex-align: center;
           align-items: center;
   gap: 8px;
+  color: var(--color-text);
+}
+
+.projects {
+  width: 100%;
+  padding: 30px;
+  -webkit-transform: translateY(100%);
+      -ms-transform: translateY(100%);
+          transform: translateY(100%);
+  opacity: 0;
+  pointer-events: none;
+  -webkit-transition: var(--tran-04);
+  transition: var(--tran-04);
+}
+
+.projects.active {
+  -webkit-transform: translateY(0);
+      -ms-transform: translateY(0);
+          transform: translateY(0);
+  opacity: 1;
+  pointer-events: all;
+}
+
+.projects__title {
+  font-size: 36px;
+  font-weight: 900;
+  margin-bottom: 8px;
+}
+
+.projects__blocks {
+  width: 100%;
+  height: calc(100% - 50px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 30px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.projects__block {
+  width: 30%;
+  height: 30%;
+  position: relative;
+}
+
+.projects__block:hover .projects__link {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.projects__link {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-primary-light);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 54px;
+  color: var(--color-primary);
+  opacity: 0;
+  pointer-events: none;
+  pointer-events: none;
+  -webkit-transition: opacity 0.3s;
+  transition: opacity 0.3s;
+}
+
+.projects__media {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  pointer-events: none;
+  -webkit-transition: opacity 0.3s;
+  transition: opacity 0.3s;
+}
+
+.projects__media {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-transition: opacity 0.3s;
+  transition: opacity 0.3s;
+}
+
+.projects__media {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+
+.projects__media img {
+  max-width: 100%;
+  width: 100%;
+  width: auto;
 }
 
 @media screen and (max-width: 1560px) {
@@ -1323,6 +1438,10 @@ body.dark {
 
   .header {
     width: 90px;
+  }
+
+  .projects__blocks {
+    gap: 16px;
   }
 }
 
@@ -1387,6 +1506,14 @@ body.dark {
 
   .home__media {
     width: 100%;
+  }
+
+  .projects__title {
+    font-size: 26px;
+  }
+
+  .projects__blocks {
+    height: calc(100% - 30px);
   }
 }
 
